<resources>
    <string name="app_name">סבתא!</string>

    <!--  General  -->
    <string name="about">אודות</string>
    <string name="close">סגירה</string>
    <string name="cancel">ביטול</string>
    <string name="save">שמירה</string>
    <string name="login">התחברות</string>
    <string name="login_auth_invalid">דוא\"ל או סיסמה לא נכונים</string>
    <string name="register">הרשמה</string>
    <string name="email_already_taken">קיים משתמש עם כתובת הדוא\"ל שסיפקת</string>
    <string name="password">סיסמה</string>
    <string name="password_required">יש למלא סיסמה</string>
    <string name="password_minimum_6_letters">יש למלא סיסמה עם לפחות 6 תווים</string>
    <string name="enter">כניסה</string>
    <string name="full_name">שם מלא</string>
    <string name="full_name_required">יש למלא שם מלא</string>
    <string name="email">דוא\"ל</string>
    <string name="email_required">יש למלא דוא\"ל</string>
    <string name="email_invalid_format">יש למלא כתובת דוא\"ל תקינה</string>
    <string name="change_full_name">שינוי שם מלא</string>
    <string name="change_email">שינוי דוא\"ל</string>
    <string name="change_email_enter_password">יש להזין סיסמה על מנת לעדכן כתובת דוא\"ל:</string>
    <string name="change_password">שינוי סיסמה</string>
    <string name="delete_account">מחיקת חשבון</string>
    <string name="against">נגד</string>
    <string name="image">תמונה</string>
    <string name="image_upload">העלאת תמונה</string>
    <string name="image_change">שינוי תמונה</string>
    <string name="camera">מצלמה</string>
    <string name="gallery">גלריה</string>
    <string name="delete_image">מחיקת תמונה</string>
    <string name="add">הוספה</string>
    <string name="update">עידכון</string>
    <string name="edit">עריכה</string>
    <string name="delete">מחיקה</string>
    <string name="failure_message">אירעה שגיאה, אנא נסו שנית מאוחר יותר.</string>
    <string name="no_network_message">אין גישה לאינטרנט</string>
    <string name="settings">הגדרות</string>
    <string name="first_name">שם פרטי</string>
    <string name="first_name_required">יש למלא שם פרטי</string>
    <string name="last_name">שם משפחה</string>
    <string name="last_name_required">יש למלא שם משפחה</string>
    <string name="current_password">סיסמה נוכחית</string>
    <string name="current_password_incorrect">סיסמה נוכחית לא נכונה</string>
    <string name="new_password">סיסמה חדשה</string>
    <string name="new_password_must_be_different">סיסמה חדשה צריכה להיות שונה מהנוכחית</string>
    <string name="new_password_confirm">סיסמה חדשה שוב</string>
    <string name="new_password_confirm_do_not_match">הסיסמה לא תואמת לסיסמה החדשה</string>
    <string name="password_changed_successfully">הסיסמה שונתה בהצלחה</string>
    <string name="password_incorrect">סיסמה לא נכונה</string>
    <string name="delete_account_important_message"><u>חשוב מאוד:</u> פעולה זאת תמחק את החשבון לצמיתות ואת כל המידע ששותף ממנו ולא יהיה ניתן לשחזר מידע זה בעתיד!</string>
    <string name="delete_account_enter_password">יש להזין סיסמה על מנת למחוק את החשבון:</string>
    <string name="account_deleted_successfully">החשבון נמחק בהצלחה</string>
    <string name="remedies_not_found">נראה שלא פרסמו תרופות סבתא עדיין</string>
    <string name="my_remedies_not_found">נראה שלא פירסמת כלום עדיין</string>
    <string name="remedy_not_exist_anymore">נראה שהתרופה אינה קיימת עוד</string>
    <string name="remedy_deleted_successfully">התרופה נמחקה בהצלחה</string>
    <string name="account_not_authorized">נראה שהחשבון שלך נחסם או נמחק</string>

    <!--  Intent Utils  -->
    <string name="gallery_intent_not_found">לא נמצאה אפליקציית גלריה במכשיר</string>
    <string name="camera_intent_not_found">לא נמצאה אפליקציית מצלמה במכשיר</string>
    <string name="web_browser_intent_not_found">לא נמצאה אפליקציית דפדפן במכשיר</string>
    <string name="network_settings_intent_not_found">לא נמצאה אפליקציית הגדרות רשת במכשיר</string>
    
    <!--  Navigation Drawer Menu Items:  -->
    <string name="menu_feed">לוח התרופות</string>
    <string name="menu_user_remedies">התרופות שפרסמתי</string>
    <string name="menu_user_settings">הגדרות חשבון</string>
    <string name="menu_logout">התנתקות</string>

    <!--  Remedy Entity  -->
    <string name="remedy_problem_desc">הבעיה הרפואית</string>
    <string name="remedy_problem_desc_required">יש למלא בעיה רפואית</string>
    <string name="remedy_name">שם התרופה</string>
    <string name="remedy_name_required">יש למלא שם תרופה</string>
    <string name="remedy_treatment_desc">אופן הטיפול</string>
    <string name="remedy_treatment_desc_required">יש למלא אופן טיפול</string>

    <!--  Remedy Create Fragment  -->
    <string name="remedy_create_title">תרופה חדשה</string>

    <!--  Remedy Edit Fragment  -->
    <string name="remedy_edit_title">עריכת תרופה</string>

    <!--  Remedy Details Fragment  -->
    <string name="remedy_details_problem">הבעיה</string>
    <string name="remedy_details_solution">הפתרון</string>
    <string name="remedy_details_treatment">אופן הטיפול</string>
    <string name="remedy_details_posted_by">פורסם ע\"י</string>
    <string name="remedy_details_posted_on_date">בתאריך</string>

    <!--  About Dialog  -->
    <string name="about_version">גירסה:</string>
    <string name="about_desc_1">\"סבתא!\" היא אפליקציה חברתית לפירסום של תרופות סבתא בין אנשים. באפליקציה ניתן לפרסם לקהילת המשתמשים תרופות סבתא כלשהם שעוזרות בבעיות רפואיות שונות, וכמו כן לצפות בתרופות סבתא שפורסמו ע\"י משתמשים אחרים.</string>
    <string name="about_desc_2">האפליקציה פותחה ע\"י אוהד שי, כפרויקט סוף הקורס: \"פיתוח אפליקציות אנדרואיד\" במסגרת לימודי תואר ראשון במדעי המחשב.</string>
    <string name="about_project_git">קישור לקוד הפרויקט:</string>
    <string name="about_project_git_link"><u>https://github.com/ohad-shai/savta</u></string>
    <string name="about_ohad_linkedin"><u>קישור ל-LinkedIn שלי</u></string>
    <string name="about_ohad_linkedin_link"><u>https://www.linkedin.com/in/ohad-shai</u></string>
    <string name="about_ohad_github"><u>קישור ל-GitHub שלי</u></string>
    <string name="about_ohad_github_link"><u>https://github.com/ohad-shai</u></string>

    <!--  Preferences Keys  -->
    <string name="pref_key_full_name">prefFullName</string>
    <string name="pref_key_email">prefEmail</string>
    <string name="pref_key_change_password">prefChangePassword</string>
    <string name="pref_key_delete_account">prefDeleteAccount</string>
</resources>