<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/baseline_view_list_24"
            android:title="@string/menu_feed" />
        <item
            android:id="@+id/nav_user_remedies"
            android:icon="@drawable/baseline_article_24"
            android:title="@string/menu_user_remedies" />
    </group>

    <group
        android:id="@+id/nav_group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_settings"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_user_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>