<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_feed">

    <fragment
        android:id="@+id/nav_feed"
        android:name="com.ohadshai.savta.ui.fragments.feed.FeedFragment"
        android:label="@string/menu_feed"
        tools:layout="@layout/fragment_feed">
        <action
            android:id="@+id/action_nav_feed_to_nav_user_remedies"
            app:destination="@id/nav_user_remedies" />
        <action
            android:id="@+id/action_nav_feed_to_nav_user_settings"
            app:destination="@id/nav_user_settings" />
    </fragment>

    <fragment
        android:id="@+id/nav_user_remedies"
        android:name="com.ohadshai.savta.ui.fragments.userRemedies.UserRemediesFragment"
        android:label="@string/menu_user_remedies"
        tools:layout="@layout/fragment_user_remedies" />

    <fragment
        android:id="@+id/nav_user_settings"
        android:name="com.ohadshai.savta.ui.fragments.userSettings.UserSettingsFragment"
        android:label="@string/menu_user_settings"
        tools:layout="@layout/fragment_user_settings" />
</navigation>