<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="28dp"
    android:paddingTop="20dp"
    android:paddingEnd="28dp"
    android:paddingBottom="16dp"
    tools:context=".ui.fragments.login.LoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:cardUseCompatPadding="true">

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/secondary"
            android:textDirection="rtl" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:cardUseCompatPadding="true">

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textAlignment="textEnd"
            android:textColor="@color/secondary"
            android:textDirection="rtl" />
    </androidx.cardview.widget.CardView>

    <com.ohadshai.savta.utils.views.ProgressButton
        android:id="@+id/progressBtnLogin"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:backgroundCustom="@drawable/light_green_gradient"
        app:cardElevation="4dp"
        app:text="@string/enter" />

</LinearLayout>